yoshimi 1.5.0 M

2017-1-31 Will
* Small clean-up in GUI panel controls.
* Removed unnecessary callback in GUI part kitlist.
* Midi-learn NRPN's done, but some non-harmful GUI
  activty light errors.

2017 - 1 30 Will
* Initial prep for midi-learn NRPNs :)

2017-1-29 Will
* Bugfix: Some limits wrongly set for midi-learn.
          Revised defaults settings.
* Bugfix: More wrong limits :(

2017-1-28 Will
* Merged in Jesper's edit button in AddSynth voice list.
* Adjusted positions/sizes to match general style.
* Made other style adjustments to AddSynth GUI.
* Set right click closures in bank GUI - long overdue.
* Changed highly confusing code window names in bank GUI
  so they match up with everything else!
  bank -> instrument
  root -> bank
  path -> root

2017-1-27 Will
* Transferred most CLI main and part level controls to
  new method and added in 'solo' and 'detune'.
* Changed resolve thread's timer to 60uS.
* Corrected GUI max parts display anomaly.
* Added missing 'c8' in GUI voice list :(

2017-1-26 Will
* Modified splash screen creation utility and files and
  made them formally available in a new 'Util' directory.
* Another attempt at error checks for attempt to access
  kit when not in kit mode. Think it's right now :)
* Commented out some redundant code.

2017-1-23 Will
* Channel switcher/Solo now ignores zero in loop mode.
  It responds to an on/off pedal press but not release.
* Added instrument "Smooth Organ" to "Companion" set.
* Added error checks for attempt to access kit when not
  in kit mode.
* Reverted new error check - it was wrong :(

2017-1-20 Will
* master: pulled in corrections and upgrades from
  (no longer) brokenReset :)
* Corrected dates in this file!

2017-1-20 Will
* brokenReset: CLI stop and reset now use direct access.
* Improved CLIresolvethread flag system.
* All master resets now handled via CLIresolvethread.
* Set up proper Init function for InterChange.cpp
  Threads could fail to start if poor general init.

2017-1-19 Will