@@ -21,6 +21,7 @@ Status bits:
 1   limit (otherwise compress)
 2   mute
 
+4   mark as an NRPN
 
 When sending internal control messages to the GUI (instead of passing on MIDI actions) the part number will be 216 - a value that is never used in the rest of the system, but is in the same region as Vectors (and yet to come Scales) and other 'accessory' parts.
 
